--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 body {
-    font-family: 'Segoe UI', Tahoma;
     justify-content: center;
     align-items: center;
-    background-color: #E6E6E6;
+    background-color: rgb(242, 242, 242);
+    font-family: 'Raleway';
+    font-weight: 500;
 }
 
 .banner {
@@ -13,6 +14,24 @@ body {
     width: 100%;
     height: 200px;
 }
+
+.title_section {
+  display: table;
+  margin: 0 auto;
+}
+
+.title_section div {
+  display: flex;
+  align-items:center;
+  font-size: 30px ;
+}
+
+.title_section img {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+}
+
 
 .container_basic, .description, .education, .experience, .skills {
     width: 70%;
@@ -32,10 +51,29 @@ body {
 
 .basics {
     width: 60%;
-    font: 'Segoe UI';
     background-color: #01AC64;
+    font-family: Raleway;
     color: white;
-    padding: 20px;  
+    padding-left: 20px;
+    padding-bottom: 0px;  
+}
+
+.profesion {
+  padding-top: 0px;
+  padding-bottom: 1em;
+}
+
+.basic_data {
+  display: flex;
+  align-items:center;
+  height: 2em;
+  margin: 0px;
+  padding: 0px;
+  
+}
+
+.basic_data p {
+  margin-left: 0.5em;
 }
 
 .basics::after {
@@ -51,7 +89,9 @@ body {
 }
 
 .name {
-    font-size: 40px;
+    font-size: 30px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 
@@ -61,6 +101,7 @@ body {
    
 }
 
+/* ------------------ Description ------------------------------- */
 
 .description {
     background-color: #FFFFFF;
@@ -92,7 +133,6 @@ body {
 
 .container_buttons button {
     margin: 10px;
-    font-family: 'Segoe UI';
     background-color: #01AC64;
     border-color: #01AC64;
     color: white;   
@@ -102,9 +142,12 @@ body {
 * {
     box-sizing: border-box;
   }
-  
+
+  /* ------------------ Description ------------------------------- */
+
   .education {
-    font-family: Segoe UI;
+    font-family: Raleway;    
+
   }
   
   /* The actual timeline (the vertical ruler) */
@@ -231,5 +274,41 @@ body {
     .right {
     left: 0%;
     }
+
   }
+
+    /* ----------------------- Skills -------------------------- */
+
+
+  .container_skills {
+    height: 1em;
+    display: flex;
+    color: #FFFFFF;
+    background-color: #01AC64;
+    overflow: auto;
+    height: auto;
+    padding: 3em;
+  }
+
+    .type_skill {
+      width: 100%;
+    }
+
+    .type_skill h1 {
+      font-size: 25px;
+    }
+
+    .type_skill span {
+      font-size: 15px;
+    }
+
+    .type_skill p {
+      font-size: 15px;
+    }
+
+    .type_skill progress {
+      height: 5px;
+      
+    }
+
 
