--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
 
 
 .basics {
-    width: 60%;
+    width: 65%;
     background-color: #01AC64;
     font-family: Raleway;
     color: white;
@@ -76,7 +76,7 @@ body {
   margin-left: 0.5em;
 }
 
-.basics::after {
+/*.basics::after {
     content: " ";
     height: 100%;
     position: absolute;
@@ -86,7 +86,7 @@ body {
     right: 330px;
     background-color: #01AC64;
     transform: skew(12deg);
-}
+}*/
 
 .name {
     font-size: 30px;
@@ -94,10 +94,13 @@ body {
     padding-bottom: 0px;
 }
 
+.photo {
+  width: 35%;
+}
 
 .photo img {
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 100%;
    
 }
 
@@ -105,9 +108,9 @@ body {
 
 .description {
     background-color: #FFFFFF;
-    -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 50px 1px rgba(139, 139, 139, 0.75);
+    -moz-box-shadow: 0px 0px 50px 1px rgba(139, 139, 139, 0.75);
+    box-shadow: 0px 0px 5px 1px  rgba(139, 139, 139, 0.75);
 
 }
 
@@ -133,6 +136,7 @@ body {
 
 .container_buttons button {
     margin: 10px;
+    padding: 10px;
     background-color: #01AC64;
     border-color: #01AC64;
     color: white;   
@@ -172,7 +176,6 @@ body {
   
   /* Container around content */
   .container {
-    padding: 10px 40px;
     position: relative;
     background-color: inherit;
     width: 50%;
@@ -195,11 +198,15 @@ body {
   /* Place the container to the left */
   .left {
     left: 0;
-  }
+    padding-top: 10px;
+    padding-right: 40px;
+    }
   
   /* Place the container to the right */
   .right {
     left: 50%;
+    padding-top: 10px;
+    padding-left: 40px;
   }
   
   /* Add arrows to the left container (pointing right) */
@@ -292,6 +299,7 @@ body {
 
     .type_skill {
       width: 100%;
+      margin: 10px;
     }
 
     .type_skill h1 {
@@ -304,11 +312,54 @@ body {
 
     .type_skill p {
       font-size: 15px;
+      margin-bottom: 0px;
     }
 
     .type_skill progress {
       height: 5px;
+      width: 8em;
+      margin-bottom: 10px;
       
     }
+
+    /* ----------------------- Modals --------------------*/
+
+   /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
