--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
 
 
 .basics {
-    width: 65%;
+    width: 70%;
     background-color: #01AC64;
     font-family: Raleway;
     color: white;
@@ -76,17 +76,30 @@ body {
   margin-left: 0.5em;
 }
 
-/*.basics::after {
+.icons-social-media {
+  margin-top: 15px;
+  width: 55px;
+  height: 40px; 
+  display: flex;
+}
+
+.icons-social-media img{
+  width: 100%;
+  height: 100%; 
+  padding-right: 15px;
+}
+
+.basics::after {
     content: " ";
     height: 100%;
     position: absolute;
     top: 0;
-    width: 100px;
+    width: 20%;
     z-index: 1;
-    right: 330px;
+    right: 25%;
     background-color: #01AC64;
     transform: skew(12deg);
-}*/
+}
 
 .name {
     font-size: 30px;
@@ -95,7 +108,7 @@ body {
 }
 
 .photo {
-  width: 35%;
+  width: 30%;
 }
 
 .photo img {
@@ -198,15 +211,15 @@ body {
   /* Place the container to the left */
   .left {
     left: 0;
-    padding-top: 10px;
     padding-right: 40px;
+    border-left: 5px solid 	#3367AA;
     }
   
   /* Place the container to the right */
   .right {
     left: 50%;
-    padding-top: 10px;
-    padding-left: 40px;
+    padding-left: 40px;    
+    border-right: 5px solid 	#3367AA;
   }
   
   /* Add arrows to the left container (pointing right) */
